--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,13 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Predication and Clefts in Scottish Gaelic"
 collection: talks
 type: "Talk"
 permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
+venue: "Arizona Linguistics Circle 15, University of Arizona"
 date: 2012-03-01
-location: "San Francisco, California"
+location: "Tucson, Arizona"
 ---
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+<!-- This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown! -->
+
+Abstract: This paper examines predication in Scottish Gaelic by providing a unified syntactic and semantic analysis for copular constructions and identificational clefts in Scottish Gaelic. Specifically I examine the augmented and the substantive copular constructions and provide an analysis for the augmented copula in which the copula sits in an intermediate projection between T and C and interprets the augment as an expletive with vacuous semantic meaning. Furthermore I provide a syntactic analysis for the substantive copula and a semantic analysis in which the substantive verb existentially closes a state of being introduced by the *'na* preposition and its variants used for indefinite predicates. Lastly, I provide a syntactic analysis of the cleft by arguing that identificational clefts are expanded augmented copular constructions in which the spellout of the augment is determined by the focalized element inside the relative clause.
