--- a/_talks/2021-10-16-talk-3.md
+++ b/_talks/2021-10-16-talk-3.md
@@ -1,5 +1,6 @@
 ---
 title: "Predication and Scottish Gaelic Clefts"
+author: "Luis A. Irizarry Figueroa, Robert Henderson, Francis Tyers"
 collection: talks
 type: "Conference proceedings talk"
 permalink: /talks/2021-10-16-talk-3
