--- a/_talks/2021-11-12-usp-4.md
+++ b/_talks/2021-11-12-usp-4.md
@@ -1,7 +1,7 @@
 ---
 title: "A Syntactically Analized Corpus of Uspanteko"
 collection: talks
-permalink: /talks/2021-10-16-talk-3
+permalink: /talks/2021-11-12-usp-4
 date: 2021-11-12
 location: "San Cristobal de las Casas, México"
 venue: "Form and Analysis in Mayan Linguistics VI"
