--- a/_talks/2021-10-16-talk-3.md
+++ b/_talks/2021-10-16-talk-3.md
@@ -1,5 +1,5 @@
 ---
-title: "Predication and Scottish Gaelic Clefts"
+title: "Predication and Clefts in Scottish Gaelic"
 author: "Luis A. Irizarry Figueroa"
 collection: talks
 type: "Conference proceedings talk"
