--- a/_talks/2021-10-16-talk-3.md
+++ b/_talks/2021-10-16-talk-3.md
@@ -7,6 +7,7 @@ permalink: /talks/2021-10-16-talk-3
 venue: "Arizona Linguistics Circle 15"
 date: 2021-10-16
 location: "Tucson, AZ"
+citation: 'Irizarry-Figueroa, Luis. 2020. Predication and Clefts in Scottish Gaelic. Ms. University of Arizona.'
 ---
 
 
