--- a/_talks/2021-11-12-usp-4.md
+++ b/_talks/2021-11-12-usp-4.md
@@ -6,11 +6,7 @@ date: 2021-11-12
 location: "San Cristobal de las Casas, México"
 venue: "Form and Analysis in Mayan Linguistics VI"
 paperurl: '/files/pdf/FAMLi6_dependency_uspanteko_poster, Henderson, Irizarry, Tyers.pdf'
-link: 'https://doi.org/10.21105/joss.01722'
+#link: 'https://doi.org/10.21105/joss.01722'
 citation: 'Scogin, Shana, Johannes Karreth, Andreas Beger, and Rob Williams. 2019. &quot;BayesPostEst: An R Package to Generate Postestimation Quantities for Bayesian MCMC Estimation.&quot; <i>Journal of Open Source Software</i> 4(42): 1722. doi:10.21105/joss.01722'
 ---
 
-
-This paper examines predication in Scottish Gaelic by providing a unified syntactic and semantic analysis for copular constructions and identificational clefts in Scottish Gaelic. Specifically I examine the augmented and the substantive copular constructions and provide an analysis for the augmented copula in which the copula sits in an intermediate projection between T and C and interprets the augment as an expletive with vacuous semantic meaning. Furthermore I provide a syntactic analysis for the substantive copula and a semantic analysis in which the substantive verb existentially closes a state of being introduced by the *'na* preposition and its variants used for indefinite predicates. Lastly, I provide a syntactic analysis of the cleft by arguing that identificational clefts are expanded augmented copular constructions in which the spellout of the augment is determined by the focalized element inside the relative clause.
-
-**Handout:** [Download](handouts/predication___clefts_handout.pdf)
